# mpv-music

./: .gitignore  Brewfile  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _config.yml  build.sh  install.sh  mpv-music  mpv-music-updater  mpv-music.conf
.github/workflows/: badge.yml  dev-release.yml  indexer-build.yml  release.yml
assets/css/: custom.scss
crates/mpv-music-indexer/: Cargo.toml  README.md
crates/mpv-music-indexer/src/: main.rs
docs/: changelog.html  index.html  latest.json  sitemap.xml
src/: 01_vars.sh  02_utils.sh  03_config.sh  04_metadata.sh  05_ui.sh  06_main.sh  cli.rs  config.rs  dep_check.rs  indexer.rs  main.rs  moe.rs  player.rs  search.rs  tui.rs  update.rs
src/04_metadata/: 01_metadata_helpers.sh  02_metadata_legacy.sh  03_metadata_wrappers.sh
src/mpv-music-indexer/: Cargo.toml
src/mpv-music-indexer/src/: main.rs
src/radio/: listen_moe.rs  mod.rs
src/tui/: items.rs  mod.rs
