[package]
name = "mpv-music"
version = "0.24.0-dev.6"
edition = "2024"
rust-version = "1.93.0"
authors = ["FurqanHun <furqanhun@proton.me>"]
license = "MIT"
description = "A TUI-based music player wrapper for MPV"

[dependencies]
walkdir = "2.5"
lofty = "0.22"
indicatif = "0.18"
rayon = "1.11"

clap = { version = "4.5", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

anyhow = "1.0"

directories = "6.0"

skim = { version = "2.0.2", default-features = false }

log = "0.4"
flexi_logger = "0.31"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
