[package]
name = "mpv-music"
version = "0.25.2"
edition = "2024"
rust-version = "1.93.0"
authors = ["FurqanHun <furqanhun@proton.me>"]
license = "MIT"
description = "A TUI-based music player wrapper for MPV"

repository = "https://github.com/FurqanHun/mpv-music"
homepage = "https://furqanhun.github.io/mpv-music/"
readme = "README.md"
documentation = "https://github.com/FurqanHun/mpv-music"
keywords = ["music", "mpv", "tui", "player", "terminal"]
categories = [
    "command-line-utilities",
    "multimedia::audio",
    "multimedia::video",
    "multimedia",
    "filesystem"
]

exclude = [
    "docs/",
    "googleee683236220c2726.html",
    "mpv-music-updater",
    "install.sh",
    ".github/",
]

[features]
default = []
update = ["dep:ureq"]

[dependencies]
walkdir = "2.5"
lofty = "0.23"
indicatif = "0.18"
rayon = "1.11"

clap = { version = "4.5", features = ["derive"] }

ureq = { version = "3.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

anyhow = "1.0"

directories = "6.0"

skim = "3.5.0"

log = "0.4"
flexi_logger = "0.31"
ctrlc = "3.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
