[package]
name = "mpv-music"
version = "0.26.0-dev.1"
edition = "2024"
rust-version = "1.93.0"
authors = ["FurqanHun <furqanhun@proton.me>"]
license = "MIT"
description = "A TUI-based music player wrapper for MPV"

repository = "https://github.com/FurqanHun/mpv-music"
homepage = "https://furqanhun.github.io/mpv-music/"
readme = "README.md"
documentation = "https://github.com/FurqanHun/mpv-music"
keywords = ["music", "mpv", "tui", "player", "terminal"]
categories = [
    "command-line-utilities",
    "multimedia::audio",
    "multimedia::video",
    "multimedia",
    "filesystem"
]

exclude = [
    "docs/",
    "googleee683236220c2726.html",
    "mpv-music-updater",
    "install.sh",
    ".github/",
]

[features]
default = []
update = ["dep:ureq"]

[dependencies]
walkdir = "2.5"
lofty = "0.23"
indicatif = "0.18"
rayon = "1.11"

clap = { version = "4.5", features = ["derive"] }

ureq = { version = "3.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.51", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
# tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde_json = "1.0"
toml = "1.0"

anyhow = "1.0"

directories = "6.0"

skim = "4.5.1"

log = "0.4"
flexi_logger = "0.31"
ctrlc = "3.5"
dunce = "1.0"
futures-util = "0.3.32"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
