[package]
name = "mpv-music-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]

# Recursive directory walkin
walkdir = "2.5"

# Metadata parsing (no more ffprobe ig)
lofty = "0.22"

# JSON serialization (basically jq replacement for rust)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI Argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

indicatif = "0.18"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
